--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-scripts": "3.2.0",
+    "react-beautiful-dnd": "10.1.0",
+    "styled-components": "3.4.9",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
